# melisa_core

./: Cargo.toml
bash_client/src/: auth.sh  db.sh  exec.sh
bash_client/ut_/: test_melisa.py  test_tunnel_and_crossregion.py
client/: Cargo.toml  README.md  install.ps1  install.sh
client/src/: auth.rs  color.rs  db.rs  exec.rs  filter.rs  main.rs  platform.rs
doc/: book.toml  dokuemtasi.pages  melisa_core.drawio
doc/src/: README.md  SUMMARY.md
doc/src/arsitektur/: gambaran.md  keamanan.md  modul.md
doc/src/panduan-pengguna/: container.md  deployment.md  instalasi-client.md  instalasi-server.md  instalasi.md  koneksi-pertama.md  pengguna.md  proyek.md  setup-awal.md
doc/src/referensi/: client-cli.md  distros.md  manifest.md  perintah.md
doc/theme/: custom.css
melisa_client/: install.sh
melisa_client/src/: auth.sh  melisa  utils.sh
src/: main.rs
src/cli/: color.rs  executor.rs  helper.rs  loading.rs  melisa_cli.rs  mod.rs  prompt.rs  wellcome.rs
src/core/: metadata.rs  mod.rs  root_check.rs  setup.rs
src/core/container/: lifecycle.rs  mod.rs  network.rs  query.rs  types.rs
src/core/guard/: filter.rs  mod.rs
src/core/project/: management.rs  mod.rs
src/core/user/: management.rs  mod.rs  sudoers.rs  types.rs
src/deployment/: dependency.rs  deployer.rs  mod.rs
src/deployment/manifest/: mod.rs  parser.rs  types.rs  validator.rs
src/distros/: abstraction.rs  builtin_distros.rs  container.rs  host_distro.rs  lxc_distro.rs  mod.rs  registry.rs
